updated the project

--- a/src/app/digimons/digimons.component.html
+++ b/src/app/digimons/digimons.component.html
@@ -1,1 +1,4 @@
-<p>digimons works!</p>
+<!-- <ng-container *ngIf="allDigimons$ | async as digimons">
+  <app-digimons-grid [digimons]="digimons"></app-digimons-grid>
+</ng-container> -->
+<app-digimons-grid></app-digimons-grid>
