--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,32 +2,22 @@
   <mat-sidenav #sidenav mode="side">Sidenav content</mat-sidenav>
   <mat-sidenav-content>
     <mat-toolbar color="primary">
-      <button
-        (click)="sidenav.toggle()"
-        mat-icon-button
-        class="example-icon"
-        aria-label="Example icon-button with menu icon"
-      >
-        <mat-icon>menu</mat-icon>
-      </button>
-      <span>My App</span>
-      <span class="example-spacer"></span>
-      <button
-        [routerLink]="['/digimons']"
-        routerLinkActive="router-link-active"
-        mat-icon-button
-        class="example-icon favorite-icon"
-        aria-label="Example icon-button with heart icon"
-      >
-        <mat-icon>favorite</mat-icon>
-      </button>
-      <button
-        mat-icon-button
-        class="example-icon"
-        aria-label="Example icon-button with share icon"
-      >
-        <mat-icon>share</mat-icon>
-      </button>
+      <mat-nav-list>
+        <mat-list-item *ngFor="let link of links">
+          <a
+            matLine
+            [routerLink]="['/welcome']"
+            routerLinkActive="router-link-active"
+            >Home</a
+          >
+          <a
+            matLine
+            [routerLink]="['/digimons']"
+            routerLinkActive="router-link-active"
+            >Digimons</a
+          >
+        </mat-list-item>
+      </mat-nav-list>
     </mat-toolbar>
   </mat-sidenav-content>
 </mat-sidenav-container>
