--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,3 +1,7 @@
-.example-spacer {
-  flex: 1 1 auto;
+// .example-spacer {
+//   flex: 1 1 auto;
+// }
+
+.router-link-active {
+  text-decoration: underline;
 }
