--- a/src/styles.scss
+++ b/src/styles.scss
@@ -39,3 +39,15 @@ body {
   background: grey;
   border-radius: 10px;
 }
+
+@import "ag-grid-community/styles/ag-grid.css";
+@import "ag-grid-community/styles/ag-theme-alpine.css";
+
+html,
+body {
+  height: 100%;
+  width: 100%;
+  padding: 5px;
+  box-sizing: border-box;
+  -webkit-overflow-scrolling: touch;
+}
