--- a/src/app/digimons/components/digimons-grid/digimons-grid.component.html
+++ b/src/app/digimons/components/digimons-grid/digimons-grid.component.html
@@ -6,9 +6,8 @@
   class="ag-theme-alpine"
   [columnDefs]="columnDefs"
   [defaultColDef]="defaultColDef"
-  [rowData]="rowData$ | async"
+  [rowData]="digimons"
   [rowSelection]="'multiple'"
   [animateRows]="true"
-  (gridReady)="onGridReady($event)"
   (cellClicked)="onCellClicked($event)"
 ></ag-grid-angular>
