--- a/src/app/page-not-found/page-not-found.component.html
+++ b/src/app/page-not-found/page-not-found.component.html
@@ -1,5 +1,5 @@
-<div class="not-found">
-  <img class="course-image mat-elevation-z10" src="" />
+<div class="not-found container">
+  <img class="image mat-elevation-z10" src="../../assets/404.jpeg" />
 
   <h1>Page Not Found</h1>
   <p>Did you mistype something in the browser address bar?</p>
