--- a/src/app/welcome/welcome.component.scss
+++ b/src/app/welcome/welcome.component.scss
@@ -1,5 +1,7 @@
 .example-card {
   max-width: 400px;
+  height: 80%;
+  margin-top: 3rem;
 }
 
 .example-header-image {
@@ -8,7 +10,10 @@
 
 .container {
   min-width: 100%;
+  height: 100%;
   display: flex;
   justify-content: center;
-  margin-top: 3rem;
+
+  background-image: url(../../assets/digimonsbackground.png);
+  background-size: cover;
 }
