--- a/src/app/digimons/components/digimons-grid/digimons-grid.component.scss
+++ b/src/app/digimons/components/digimons-grid/digimons-grid.component.scss
@@ -1,10 +1,12 @@
 .ag-theme-alpine {
   --ag-foreground-color: rgb(0, 0, 0);
-  --ag-background-color: rgb(207, 10, 10);
+  --ag-background-color: rgb(207, 194, 10);
   --ag-header-foreground-color: rgb(255, 255, 255);
-  --ag-header-background-color: rgb(0, 0, 0);
+  --ag-header-background-color: rgba(0, 0, 0, 0.637);
   --ag-odd-row-background-color: rgb(238, 238, 238);
   --ag-header-column-resize-handle-color: rgb(126, 46, 132);
   --ag-font-size: 17px;
   --ag-font-family: monospace;
 }
+
+// background-image: linear-gradient(to right, #434343 0%, black 100%);
