--- a/src/app/digimons/digimons.component.scss
+++ b/src/app/digimons/digimons.component.scss
@@ -1,5 +1,6 @@
 .container {
   min-width: 100%;
+  height: 100vh;
   display: flex;
   justify-content: center;
   background-image: url(../../assets/listbackground.png);
@@ -7,6 +8,7 @@
 }
 
 .grid {
+  margin-top: 3rem;
   min-width: 60rem;
-  height: 100vh;
+  height: 80vh;
 }
